hard-gists/3682135/run.log
=== Docker Run Log for 3682135 ===
Started at: Mi 29. Okt 13:56:07 CET 2025

[2025-10-29 13:56:08] START: Running container for 3682135
[2025-10-29 13:56:08] SUCCESS: Container a4d63f4ac55af5d9489be72f8f138804f890bf731506017f380e2091d64fa76c started for 3682135
=== Container logs for 3682135 ===
  File "/snippet.py", line 240
    print u.max(), u.min()
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3682135 ===
[2025-10-29 13:56:10] INFO: Container a4d63f4ac55af5d9489be72f8f138804f890bf731506017f380e2091d64fa76c has stopped
